clean up gradle