@@ -31,12 +31,6 @@ test {
     useJUnitPlatform()
 
     jvmArgs '-ea',
-            '--add-exports',
-            'org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED',
-            '--add-exports',
-            'org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED',
-            '--add-exports',
-            'org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED',
             '-Dgraalvm.locatorDisabled=true'
 
     testLogging {
